MongodbCloudformation.yaml
---
AWSTemplateFormatVersion: '2010-09-09'
Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.0.0.0/16
  
  MyInternetGateway:
    Type: 'AWS::EC2::InternetGateway'

  MyVPCGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref MyInternetGateway

  MyRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC

  PublicRoute1:
    Type: 'AWS::EC2::Route'
    DependsOn: MyVPCGatewayAttachment
    Properties:
      RouteTableId: !Ref MyRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref MyInternetGateway

  PrivateRoute1:
    Type: 'AWS::EC2::Route'
    DependsOn: MyVPCGatewayAttachment
    Properties:
      RouteTableId: !Ref MyRouteTable
      DestinationCidrBlock: '10.0.0.0/16'


  Subnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.0.0/24

  AnsibleSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Allows SSH access
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: 'tcp'
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
  
  MongoDBSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Allows SSH access
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: 'tcp'
          FromPort: '22'
          ToPort: '22'
          CidrIp: 10.0.0.0/16

  Ansible:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: ami-029562ad87fe1185c
      InstanceType: t3.micro
      KeyName: TMCedward
      NetworkInterfaces:
        - AssociatePublicIpAddress: 'true'
          DeviceIndex: '0'
          GroupSet:
            - !Ref AnsibleSG
          SubnetId: !Ref Subnet
      Tags: 
          - Key: "Name"
            Value: "Ansible" 

  MongoDB1:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: ami-029562ad87fe1185c
      InstanceType: t3.micro
      KeyName: TMCedward
      NetworkInterfaces:
        - AssociatePublicIpAddress: 'false'
          DeviceIndex: '0'
          GroupSet:
            - !Ref MongoDBSG
          SubnetId: !Ref Subnet
      Tags: 
          - Key: "Name"
            Value: "MongoDB1" 
          
  MongoDB2:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: ami-029562ad87fe1185c
      InstanceType: t3.micro
      KeyName: TMCedward
      NetworkInterfaces:
        - AssociatePublicIpAddress: 'false'
          DeviceIndex: '0'
          GroupSet:
            - !Ref MongoDBSG
          SubnetId: !Ref Subnet
      Tags: 
          - Key: "Name"
            Value: "MongoDB2" 
          
  MongoDB3:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: ami-029562ad87fe1185c
      InstanceType: t3.micro
      KeyName: TMCedward
      NetworkInterfaces:
        - AssociatePublicIpAddress: 'false'
          DeviceIndex: '0'
          GroupSet:
            - !Ref MongoDBSG
          SubnetId: !Ref Subnet
      Tags: 
          - Key: "Name"
            Value: "MongoDB3"
